# Lomoco

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README.md  autogen.sh  cmdline.h  configure.ac  configure.scan  g_hack.c  lomoco.c
src/: .splintrc  CMakeLists.txt  Makefile.am  cmdline.c  g_hack.c  lomoco.1  lomoco.c  lomoco.h  lomoco.xml
udev/: README  toudev.awk  udev.lomoco
